@@ -1,3 +1,3 @@
 org.gradle.daemon=true
-org.gradle.jvmargs=-Xms128m -Xmx1536m
+org.gradle.jvmargs=-Xms128m -Xmx1336m
 org.gradle.configureondemand=true
