@@ -4,6 +4,7 @@
 - [BREAKING] TiledCollisionFactory now takes TiledMap as parameter
 - [BREAKING] SlideIn/SlideOut animations now take duration as parameter
 - (#74) Added TiledMapLoader for loading TiledMap instances via AssetManager
+- Added AnimatedImage element to UI library
 - Added new FlexDirections; ROW_REVERSE and CENTER
 - Added Sprite#getAlpha() method
 - Added jacocoTestReport for better code coverage reporting
